[package]
name = "abs_buff_chunk_utils"
version = "0.2.0"
edition = "2021"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "Chunk IO utils for abs_buff crate."
homepage = "https://github.com/ljsnogard/abs_buff_chunk_utils"
keywords = ["IO", "buffer"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
# abs_buff = { git = "https://github.com/ljsnogard/abs_buff_chunk_utils.git", rev = "e7053cfb9a98af6296b2708d3f26cefe6fb89b9c" }
abs_buff = { path = "../abs_buff" }
pin-project = { version = "1.1.*" }

[dev-dependencies]
log = { version = "0.4.*" }
